HTML内にCSS文追加 header部分の定義等

--- a/index.html
+++ b/index.html
@@ -2,33 +2,43 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
+        <style type="text/css">
+            header ul{
+                height: auto;
+                overflow: hidden;
+            }
+            header ul li{
+                float:left;
+                width: 300px;
+                height: 100px;
+                background-color: red;
+            }
+        </style>
     </head>
     <body>
-    <header>header</header>
-    <footer>footer</footer>
-    <div></div>
-    <article>article</article>
-    <section>section</section>
-    <h1>h1</h1>
-    <h2>h2</h2>
-    <h3>h3</h3>
-    <ul>
-        <li>li</li>
-        <li>li</li>
-        <li>li</li>
-        <li>li</li>
-    </ul>
-    <ol>
-        <li>li</li>
-        <li>li</li>
-        <li>li</li>
-        <li>li</li>
-    </ol>
-    <a href="#">リンク</a>
-    <img src="" />
-    <br />
-    <hr />
-    <meta>
-    <input type="" />
+        <header id="a" class="b">
+            <h1>h1</h1>
+            <ul style="width:1200px; background-color: #;">
+                <li>
+                    <a href="#">リンク</a>
+                </li>
+                <li>li</li>
+                <li>li</li>
+                <li>li</li>
+        </header>
+        <div>
+            <section>
+                <img src="" alt="" />
+            </section>
+            <section>
+                <h2>h2</h2>
+            </section>
+            <ul>
+                <li>li</li>
+                <li>li</li>
+                <li>li</li>
+            </ul>
+        </div>
+        <footer>footer</footer>
     </body>
 </html>
