画像追加 お知らせに枠作成

--- a/03-1_デザイン/html/index.html
+++ b/03-1_デザイン/html/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <header>
+
             <h1>h1</h1>
             <ul>
                 <li>
@@ -17,18 +18,29 @@
                 <li>li</li>
             </ul>
         </header>
-        <div>
-            <section>
-                <img src="" />
+        <div id="wrapper">
+            <section id="main-image">
+                <img src="../img/main_image01.jpg" alt="" />
             </section>
-            <section>
-                <h2>h2</h2>
+            <section id="info">
+                <h2>お知らせ</h2>
+                <div>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </div>
             </section>
             <ul>
                 <li>li</li>
                 <li>li</li>
                 <li>li</li>
             </ul>
+            <div id="page-top">
+                <p>
+                    TOP
+                </p>
+            </div>
         </div>
         <footer>footer</footer>
     </body>
