とりあえず完成？ お知らせ作成 カテゴリ作成 細かいパラメータが違う気がする

--- a/03-1_デザイン/html/index.html
+++ b/03-1_デザイン/html/index.html
@@ -8,7 +8,7 @@
     <body>
         <header>
 
-            <h1>h1</h1>
+            <h1>株式会社うまいぼー</h1>
             <ul>
                 <li>
                     <a href="#">リンク</a>
@@ -25,16 +25,16 @@
             <section id="info">
                 <h2>お知らせ</h2>
                 <div>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
+                    <p>2016年5月30日　第四回お知らせ</p>
+                    <p>2016年5月30日　第三回お知らせ</p>
+                    <p>2016年5月30日　第二回お知らせ</p>
+                    <p>2016年5月30日　第一回お知らせ</p>
                 </div>
             </section>
-            <ul>
-                <li>li</li>
-                <li>li</li>
-                <li>li</li>
+            <ul id="category">
+                <li>てすと</li>
+                <li>うまく</li>
+                <li>できてるかな</li>
             </ul>
             <div id="page-top">
                 <p>
