課題作業 画像の変更、お知らせ文字色変更、グローバルナビ追加、お知らせとカテゴリー反転

--- a/html/index.html
+++ b/html/index.html
@@ -7,15 +7,20 @@
     </head>
     <body>
         <header>
-            <h1>株式会社中野ソーシング</h1>
-            <ul>
-                <li>
-                    <a href="#">商品情報</a>
-                </li>
-                <li>採用情報</li>
-                <li>会社概要</li>
-                <li>お問い合わせ</li>
-            </ul>
+            <div>
+                <h1>株式会社中野ソーシング</h1>
+            </div>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#">商品情報</a>
+                    </li>
+                    <li>採用情報</li>
+                    <li>会社概要</li>
+                    <li>お問い合わせ</li>
+                    <li>introduction</li>
+                </ul>
+            </nav>
         </header>
         <div id="wrapper">
             <section id="main-image">
