introduction追加 新規コンテンツ追加、細かい数値の調整

--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <div>
-                <h1>株式会社中野ソーシング</h1>
+                <h1>株式会社skzソーシング</h1>
             </div>
             <nav>
                 <ul>
@@ -25,6 +25,12 @@
         <div id="wrapper">
             <section id="main-image">
                 <img src="./../img/main_image01.jpg" />
+            </section>
+            <section>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
             </section>
             <section id="info">
                 <h2>お知らせ</h2>
@@ -45,6 +51,6 @@
                 <p>TOP</p>
             </div>
         </div>
-        <footer>footer</footer>
+        <footer>(c) 2016 skz inc. All Rights Reserved.</footer>
     </body>
 </html>
