新規作成ページへのリンク設定、リンクの文字色変更、TOPボタンをコモンに移動

--- a/html/introduction.html
+++ b/html/introduction.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <div>
-                <h1>株式会社szkソーシング</h1>
+                <h1><a id="title" href="./index.html">株式会社skzソーシング</a></h1>
             </div>
             <nav>
                 <ul>
@@ -18,12 +18,16 @@
                     <li>採用情報</li>
                     <li>会社概要</li>
                     <li>お問い合わせ</li>
-                    <li>introduction</li>
+                    <li>
+                        <a href="./introduction.html">introduction</a>
+                    </li>
                 </ul>
             </nav>
         </header>
         <div id="wrapper">
-
+            <section>
+                
+            </section>
             <div id="page-top">
                 <p>TOP</p>
             </div>
