--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <div>
-                <h1>株式会社skzソーシング</h1>
+                <h1><a id="title" href="./index.html">株式会社skzソーシング</a></h1>
             </div>
             <nav>
                 <ul>
@@ -18,7 +18,9 @@
                     <li>採用情報</li>
                     <li>会社概要</li>
                     <li>お問い合わせ</li>
-                    <li>introduction</li>
+                    <li>
+                        <a href="./introduction.html">introduction</a>
+                    </li>
                 </ul>
             </nav>
         </header>
