introduction.html作成、css作成中、画像など追加

--- a/html/introduction.html
+++ b/html/introduction.html
@@ -26,7 +26,64 @@
         </header>
         <div id="wrapper">
             <section>
-                
+                <h2>銭湯紹介</h2>
+            </section>
+            <section>
+                <ul>
+                    <li>
+                        <a href="#">清水湯（南青山）</a>
+                    </li>
+                    <li>
+                        <a href="#">武蔵小山温泉清水湯</a>
+                    </li>
+                    <li>その他</li>
+                </ul>
+            </section>
+            <section id="shimizu">
+                <div class="ent">
+                    <h3>清水湯(南青山)</h3>
+                    <img src="./../img/shimizu.jpg" alt="" />
+                </div>
+                <div class="info">
+                    <li>【店名】南青山・清水湯</li>
+                    <li>【住所】港区南青山3-12-3</li>
+                    <li>【営業時間】</li>
+                    <li>［平日］12:00〜24:00（最終入場23:30）</li>
+                    <li>［土・日・祝日］12:00〜23:00（最終入場22:30）</li>
+                    <li>※毎週金曜日定休</li>
+                    <li>【料金】</li>
+                    <li>［銭湯コース大人］（中学生以上）460円</li>
+                    <li>［銭湯コース］（レンタルタオル付）760円</li>
+                    <li>［サウナコース］（入浴料込）1,000円</li>
+                </div>
+                <div>
+                    <p>
+                        表参道の駅から歩くこと2分オシャレな店構えの銭湯、清水湯があります。清水湯ではメインとなるシルク風呂、3種類のジェットバス、高濃度炭酸泉のほか、別料金でサウナにも入ることができます。
+                    </p>
+                </div>
+                <img class="in" src="./../img/shimizu_in.jpg" alt="" />
+            </section>
+            <section id="musashi">
+                <div class="ent">
+                    <h3>武蔵小山温泉清水湯</h3>
+                    <img src="./../img/musashi.jpg" alt="" />
+                </div>
+                <div class="info">
+                    <li>【店名】武蔵小山温泉　清水湯</li>
+                    <li>【住所】東京都品川区小山3-9-1</li>
+                    <li>【営業時間】</li>
+                    <li>［平日］12:00～24:00</li>
+                    <li>［日曜日］8:00～24:00</li>
+                    <li>［祝日］12:00～24:00</li>
+                    <li>【定休日】月曜日</li>
+                    <li>【料金】［大人］460円［中学生］300円［子供］180円［幼稚園児］無料［岩盤浴］1,300円（女性専用)［サウナ ］400円</li>
+                </div>
+                <div class="">
+                    <p>
+                        東京にいながらも一回で2種類の天然温泉を楽しめる武蔵小山温泉清水湯。擦り傷や切り傷等の外傷に効果がある黄金の湯と保湿や保温など肌に効果的な黒湯があります。また、天然温泉だけではなく岩盤浴も楽しむことができる入浴施設なのね「時間がないけどいろんな種類の温泉に浸かりたい。」という人におすすめの温泉です。
+                    </p>
+                </div>
+                <img class="in" src="./../img/musashi_in.jpg" alt="" />
             </section>
             <div id="page-top">
                 <p>TOP</p>
