--- a/html/index.html
+++ b/html/index.html
@@ -15,11 +15,11 @@
                     <li>
                         <a href="#">商品情報</a>
                     </li>
-                    <li>採用情報</li>
-                    <li>会社概要</li>
+                    <li>料金</li>
+                    <li>お風呂</li>
                     <li>お問い合わせ</li>
                     <li>
-                        <a href="./introduction.html">introduction</a>
+                        <a href="./introduction.html">紹介</a>
                     </li>
                 </ul>
             </nav>
@@ -37,17 +37,17 @@
             <section id="info">
                 <h2>お知らせ</h2>
                 <div>
-                    <p>2016年5月30日 第四回お知らせ テキーラは嫌だ･･･</p>
+                    <p>2016年5月30日 第四回お知らせ 飲酒後のご入浴について</p>
                     <p>2016年5月30日 第三回お知らせ 日本酒の深さ</p>
-                    <p>2016年5月30日 第二回お知らせ ジントニックへの目覚め</p>
+                    <p>2016年5月30日 第二回お知らせ ご入浴中の飲酒はご遠慮ください</p>
                     <p>2016年5月30日 第一回お知らせ 生ビールの美味しさ</p>
                 </div>
             </section>
             <ul id="category">
-                <li>スポーツ</li>
-                <li>ファッション</li>
+                <li>料金</li>
+                <li>休憩所</li>
                 <li>娯楽</li>
-                <li>インテリア</li>
+                <li>その他</li>
             </ul>
             <div id="page-top">
                 <p>TOP</p>
