未完成、崩れてない・・・？

--- a/html/introduction.html
+++ b/html/introduction.html
@@ -31,17 +31,19 @@
             <section>
                 <ul>
                     <li>
-                        <a href="#">清水湯（南青山）</a>
+                        <a href="#shimizu_info">清水湯（南青山）</a>
                     </li>
                     <li>
-                        <a href="#">武蔵小山温泉清水湯</a>
+                        <a href="#musashi_info">武蔵小山温泉清水湯</a>
                     </li>
                     <li>その他</li>
                 </ul>
             </section>
             <section id="shimizu">
-                <div class="ent">
+                <div>
                     <h3>清水湯(南青山)</h3>
+                </div>
+                <div class="ent">
                     <img src="./../img/shimizu.jpg" alt="" />
                 </div>
                 <div class="info">
@@ -64,8 +66,10 @@
                 <img class="in" src="./../img/shimizu_in.jpg" alt="" />
             </section>
             <section id="musashi">
-                <div class="ent">
+                <div class="">
                     <h3>武蔵小山温泉清水湯</h3>
+                </div>
+                <div class="ent">
                     <img src="./../img/musashi.jpg" alt="" />
                 </div>
                 <div class="info">
