とりあえず崩れはしない？？

--- a/html/introduction.html
+++ b/html/introduction.html
@@ -25,20 +25,22 @@
             </nav>
         </header>
         <div id="wrapper">
-            <section>
-                <h2>銭湯紹介</h2>
-            </section>
-            <section>
-                <ul>
-                    <li>
-                        <a href="#shimizu_info">清水湯（南青山）</a>
-                    </li>
-                    <li>
-                        <a href="#musashi_info">武蔵小山温泉清水湯</a>
-                    </li>
-                    <li>その他</li>
-                </ul>
-            </section>
+            <div id="introduction">
+                <section>
+                    <h2>銭湯紹介</h2>
+                </section>
+                <section>
+                    <ul>
+                        <li>
+                            <a href="#shimizu_info">清水湯（南青山）</a>
+                        </li>
+                        <li>
+                            <a href="#musashi_info">武蔵小山温泉清水湯</a>
+                        </li>
+                        <li>その他</li>
+                    </ul>
+                </section>
+            </div>
             <section id="shimizu">
                 <div>
                     <h3>清水湯(南青山)</h3>
